Changed Log.i to Log.d.  Added ability to track the tower location on the map.  Redid the network logic so MapLocationActivity is a main activity on the Misc menu, along with NetworkActivity.  NetworkActivity no longer has a Map menu item.  Instead, MapLocationActivity has a Details menu item that calls NetworkActivity.  Added an IntervalTimer class to handle timing the tower updates.
git-svn-id: http://svn.kenevans.net/Android/trunk@172 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Misc/res/values/strings.xml
+++ b/Misc/res/values/strings.xml
@@ -19,4 +19,5 @@
 	<string name="dryrun_item">Toggle Dry Run</string>
 	<string name="clear_item">Clear</string>
 	<string name="map_item">Map</string>
+	<string name="details_item">Details</string>
 </resources>
