Added InfoActivity to display help and implemented help for the MapLocation and DisplayMessage.  Fixed Misc to have both a debug and release list.  Fixed the manifest to use preferExternal for the instalLocation.  Did other cleanup.
git-svn-id: http://svn.kenevans.net/Android/trunk@180 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Misc/res/values/strings.xml
+++ b/Misc/res/values/strings.xml
@@ -11,6 +11,8 @@
 	<string name="dryRunTitle">Set Dry Run</string>
 	<string name="dryrun_item">Set Dry Run</string>
 	<string name="fixtime_item">Fix Time</string>
+	<string name="help_item">Help</string>
+	<string name="info_title">Help</string>
 	<string name="map_item">Map</string>
 	<string name="map_location_title">Location</string>
 	<string name="messagelistener_title">Message Listener</string>
