Added BID to the MapLocation parameters and added the ability to send an SMS message with the tower parameters using the default Message app.
git-svn-id: http://svn.kenevans.net/Android/trunk@181 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Misc/res/values/strings.xml
+++ b/Misc/res/values/strings.xml
@@ -28,6 +28,7 @@
 	<string name="prev_item">Previous</string>
 	<string name="refresh_item">Refresh</string>
 	<string name="reset_item">Reset</string>
+	<string name="send_item">Send SMS</string>
 	<string name="sms_title">Messages</string>
 	<string name="timeoffset_dialog_title">Set the Desired Time Change</string>
 	
