Added AppsActivity to display the downloaded applications (for in case there is a full reset).  Had to make writing the Text be asynchronous as it takes a long time and nothing appears to happen until it is done, otherwise.  Fixed it to write to the SD card.
git-svn-id: http://svn.kenevans.net/Android/trunk@185 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Misc/res/values/strings.xml
+++ b/Misc/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="app_name">Misc</string>
+	<string name="apps_title">Applications Information</string>
 	<string name="cancel_label">Cancel</string>
 	<string name="clear_item">Clear</string>
 	<string name="copy_item">Copy</string>
@@ -28,6 +29,7 @@
 	<string name="prev_item">Previous</string>
 	<string name="refresh_item">Refresh</string>
 	<string name="reset_item">Reset</string>
+	<string name="save_app_info_item">Save to SD Card</string>
 	<string name="send_item">Send SMS</string>
 	<string name="sms_title">Messages</string>
 	<string name="timeoffset_dialog_title">Set the Desired Time Change</string>
