--- a/Misc/res/values/strings.xml
+++ b/Misc/res/values/strings.xml
@@ -31,6 +31,7 @@
 	<string name="reset_item">Reset</string>
 	<string name="save_app_info_item">Save to SD Card</string>
 	<string name="send_item">Send SMS</string>
+	<string name="settings_item">Settings</string>
 	<string name="sms_title">Messages</string>
 	<string name="timeoffset_dialog_title">Set the Desired Time Change</string>
 	
