--- a/Daily Dilbert/res/values/strings.xml
+++ b/Daily Dilbert/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="today_item">Today</string>
     <string name="date_item">Pick Date</string>
     <string name="share_item">Share</string>
+    <string name="next_item">Next</string>
+    <string name="prev_item">Prev</string>
 
 	<!-- Utils -->
 	<string name="error">Error</string>
