Implemented saving to the SD card.
git-svn-id: http://svn.kenevans.net/Android/trunk@196 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Daily Dilbert/res/values/strings.xml
+++ b/Daily Dilbert/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="first_item">First</string>
     <string name="today_item">Today</string>
     <string name="date_item">Pick Date</string>
+    <string name="save_item">Save</string>
     <string name="share_item">Share</string>
     <string name="next_item">Next</string>
     <string name="prev_item">Prev</string>
