--- a/Daily Dilbert/res/values/strings.xml
+++ b/Daily Dilbert/res/values/strings.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Daily Dilbert</string>
-    <string name="first_item">First</string>
-    <string name="today_item">Today</string>
     <string name="date_item">Pick Date</string>
-    <string name="save_item">Save</string>
-    <string name="share_item">Share</string>
+    <string name="first_item">First</string>
+	<string name="help_item">Help</string>
+	<string name="info_title">Help</string>
     <string name="next_item">Next</string>
     <string name="prev_item">Prev</string>
+    <string name="save_item">Save</string>
+    <string name="share_item">Share</string>
+    <string name="today_item">Today</string>
 
 	<!-- Utils -->
 	<string name="error">Error</string>
