Fixed it to do previous on click on left half, next on click on right half, and zoom on double click.  Made ZoomActivity and ScrolledImageView that fills screen vertically and pans horizontally.  Renamed ImagePanel to FittedImageView.  versionNumber = 4 and versionName = 1.1.0.
git-svn-id: http://svn.kenevans.net/Android/trunk@224 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Daily Dilbert/res/values/strings.xml
+++ b/Daily Dilbert/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="save_item">Save</string>
     <string name="share_item">Share</string>
     <string name="today_item">Today</string>
+	<string name="zoom_title">Zoom</string>
 
 	<!-- Utils -->
 	<string name="error">Error</string>
