Fixed it do do prev, zoom, and next on single click to the left, center, or right, respectively.  On double click does first, full zoom, and today.  Implemented full zoom which allows panning in either direction and zooming with a two-finger gesture.
git-svn-id: http://svn.kenevans.net/Android/trunk@230 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Daily Dilbert/res/values/strings.xml
+++ b/Daily Dilbert/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="date_item">Pick Date</string>
     <string name="first_item">First</string>
 	<string name="help_item">Help</string>
+	<string name="fullzoom_title">Full Zoom</string>
 	<string name="info_title">Help</string>
     <string name="next_item">Next</string>
     <string name="prev_item">Prev</string>
