--- a/Misc/res/values/strings.xml
+++ b/Misc/res/values/strings.xml
@@ -32,6 +32,10 @@
 	<string name="refresh_item">Refresh</string>
 	<string name="reset_item">Reset</string>
 	<string name="save_app_info_item">Save to SD Card</string>
+	<string name="select_item">Filter</string>
+	<string name="select_none">None</string>
+	<string name="select_short_unknown_nonoutgoing">Short, Unknown, Not Outgoing</string>
+	<string name="selectTitle">Select Filter</string>
 	<string name="send_item">Send SMS</string>
 	<string name="settings_item">Settings</string>
 	<string name="sms_title">Messages</string>
