Added static routines to get string representations of Phone and Email types.
git-svn-id: http://svn.kenevans.net/Android/trunk@266 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Misc/res/values/strings.xml
+++ b/Misc/res/values/strings.xml
@@ -26,6 +26,7 @@
 	<string name="sort_time">By Time</string>
 	<string name="sort_id">By ID</string>
 	<string name="sort_name">By Name</string>
+	<string name="sort_number">By Number</string>
 	<string name="sort_duration">By Duration</string>
 	<string name="sort_title">Select Sort Order</string>
 	<string name="sort_item">Sort</string>
