Fixed it to send a spam report for a message.
git-svn-id: http://svn.kenevans.net/Android/trunk@274 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Misc/res/values/strings.xml
+++ b/Misc/res/values/strings.xml
@@ -12,6 +12,13 @@
 	<string name="displayphonehistory_title">Call</string>
 	<string name="dryRunTitle">Set Dry Run</string>
 	<string name="dryrun_item">Set Dry Run</string>
+	<string name="filter_10min">Longer than 10 minutes</string>
+	<string name="filter_item">Filter</string>
+	<string name="filter_known">Known</string>
+	<string name="filter_none">None</string>
+	<string name="filter_short_unknown_nonoutgoing">Short, Unknown, Not Outgoing</string>
+	<string name="filter_title">Select Filter</string>
+	<string name="filter_unknown">Unknown</string>
 	<string name="fixtime_item">Fix Time</string>
 	<string name="help_item">Help</string>
 	<string name="info_title">Help</string>
@@ -23,28 +30,22 @@
 	<string name="off">OFF</string>
 	<string name="ok_label">OK</string>
 	<string name="on">ON</string>
-	<string name="sort_time">By Time</string>
-	<string name="sort_id">By ID</string>
-	<string name="sort_name">By Name</string>
-	<string name="sort_number">By Number</string>
-	<string name="sort_duration">By Duration</string>
-	<string name="sort_title">Select Sort Order</string>
-	<string name="sort_item">Sort</string>
 	<string name="phonehistory_title">Calls</string>
 	<string name="prev_item">Previous</string>
 	<string name="refresh_item">Refresh</string>
+	<string name="reportspam_item">Report Spam</string>
 	<string name="reset_item">Reset</string>
 	<string name="save_app_info_item">Save to SD Card</string>
-	<string name="filter_item">Filter</string>
-	<string name="filter_none">None</string>
-	<string name="filter_short_unknown_nonoutgoing">Short, Unknown, Not Outgoing</string>
-	<string name="filter_unknown">Unknown</string>
-	<string name="filter_known">Known</string>
-	<string name="filter_10min">Longer than 10 minutes</string>
-	<string name="filter_title">Select Filter</string>
 	<string name="send_item">Send SMS</string>
 	<string name="settings_item">Settings</string>
 	<string name="sms_title">Messages</string>
+	<string name="sort_duration">By Duration</string>
+	<string name="sort_id">By ID</string>
+	<string name="sort_item">Sort</string>
+	<string name="sort_name">By Name</string>
+	<string name="sort_number">By Number</string>
+	<string name="sort_time">By Time</string>
+	<string name="sort_title">Select Sort Order</string>
 	<string name="timeoffset_dialog_title">Set the Desired Time Change</string>
 	<string name="yes_label">Yes</string>
 	
