--- a/Misc/res/values/strings.xml
+++ b/Misc/res/values/strings.xml
@@ -4,6 +4,7 @@
 	<string name="apps_title">Applications Information</string>
 	<string name="cancel_label">Cancel</string>
 	<string name="clear_item">Clear</string>
+	<string name="clear_text_item">Clear Text on SD Card</string>
 	<string name="copy_item">Copy</string>
 	<string name="current_time_title">Current Time</string>
 	<string name="delete_item">Delete</string>
@@ -36,6 +37,7 @@
 	<string name="reportspam_item">Report Spam</string>
 	<string name="reset_item">Reset</string>
 	<string name="save_app_info_item">Save to SD Card</string>
+	<string name="save_text_item">Save Text to SD Card</string>
 	<string name="send_item">Send SMS</string>
 	<string name="settings_item">Settings</string>
 	<string name="sms_title">Messages</string>
