Fine tuning of edit layout including or'ing of inputTypes.  Added beginning and end of ListView menu items.
git-svn-id: http://svn.kenevans.net/Android/trunk@327 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Heart Monitor/res/values/strings.xml
+++ b/Heart Monitor/res/values/strings.xml
@@ -5,7 +5,9 @@
 	<string name="refresh_item">Refresh</string>
 	<string name="save_item">Save as Text</string>
 	<string name="save">Save</string>
-    <string name="delete">Delete</string>
+	<string name="tostart_item">Beginning</string>
+	<string name="toend_item">End</string>
+	<string name="delete">Delete</string>
     <string name="cancel">Cancel</string>
     <string name="edit_data">Edit Data</string>
     <string name="count_label">Count</string>
