--- a/Heart Monitor/res/values/strings.xml
+++ b/Heart Monitor/res/values/strings.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Heart Monitor</string>
+	<string name="Filter_item">Filter</string>
 	<string name="new_item">New</string>
-	<string name="refresh_item">Refresh</string>
+		<string name="refresh_item">Refresh</string>
 	<string name="save_item">Save as Text</string>
 	<string name="save">Save</string>
 	<string name="tostart_item">Beginning</string>
@@ -16,7 +17,12 @@
     <string name="datemod_label">Modified Time</string>
     <string name="edited_label">Edited</string>
     <string name="comment_label">Comment</string>
-    		
+    
+    <string name="filter_nonzero">Count is not Zero</string>
+    <string name="filter_counttotal">Count equals Total</string>
+    <string name="filter_none">None</string>
+	<string name="filter_title">Select Filter</string>
+			
 	<!-- Utils -->
 	<string name="error">Error</string>
 	<string name="exception">Exception</string>
