--- a/Heart Monitor/res/values/strings.xml
+++ b/Heart Monitor/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="datemod_label">Modified Time</string>
     <string name="edited_label">Edited</string>
     <string name="comment_label">Comment</string>
+	<string name="weather_item">Insert Weather</string>
     
     <string name="filter_nonzero">Count is not Zero</string>
     <string name="filter_counttotal">Count equals Total</string>
