--- a/Misc/res/values/strings.xml
+++ b/Misc/res/values/strings.xml
@@ -6,10 +6,17 @@
 	<string name="clear_item">Clear</string>
 	<string name="clear_text_item">Clear Text on SD Card</string>
 	<string name="copy_item">Copy</string>
+	<string name="contacts_title">Messages</string>
+	<string name="content_image">Image</string>
+	<string name="content_image_up_arrow">Up Arrow</string>
+	<string name="content_image_down_arrow">Down Arrow</string>
 	<string name="current_time_title">Current Time</string>
 	<string name="delete_item">Delete</string>
 	<string name="details_item">Details</string>
-	<string name="displaymessage_title">Message</string>
+	<string name="display_contacts_title">Contact</string>
+	<string name="display_mms_message_title">MMS Message</string>
+	<string name="display_sms_message_title">SMS Message</string>
+	<string name="display_sms_mms_message_title">Message</string>
 	<string name="displayphonehistory_title">Call</string>
 	<string name="dryRunTitle">Set Dry Run</string>
 	<string name="dryrun_item">Set Dry Run</string>
@@ -26,6 +33,7 @@
 	<string name="map_item">Map</string>
 	<string name="map_location_title">Location</string>
 	<string name="messagelistener_title">Message Listener</string>
+	<string name="mms_title">MMS Messages</string>
 	<string name="network_title">Network Information</string>
 	<string name="next_item">Next</string>
 	<string name="off">OFF</string>
@@ -40,7 +48,8 @@
 	<string name="save_text_item">Save Text to SD Card</string>
 	<string name="send_item">Send SMS</string>
 	<string name="settings_item">Settings</string>
-	<string name="sms_title">Messages</string>
+	<string name="sms_mms_title">Messages</string>
+	<string name="sms_title">SMS Messages</string>
 	<string name="sort_duration">By Duration</string>
 	<string name="sort_id">By ID</string>
 	<string name="sort_item">Sort</string>
