Fixed incorrect title for ContactsActivity.
git-svn-id: http://svn.kenevans.net/Android/trunk@458 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Misc/res/values/strings.xml
+++ b/Misc/res/values/strings.xml
@@ -6,7 +6,7 @@
 	<string name="clear_item">Clear</string>
 	<string name="clear_text_item">Clear Text on SD Card</string>
 	<string name="copy_item">Copy</string>
-	<string name="contacts_title">Messages</string>
+	<string name="contacts_title">Contacts</string>
 	<string name="content_image">Image</string>
 	<string name="content_image_up_arrow">Up Arrow</string>
 	<string name="content_image_down_arrow">Down Arrow</string>
