--- a/Touch Image/res/values/strings.xml
+++ b/Touch Image/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="hello">Hello World, TouchImageActivity!</string>
     <string name="app_name">Touch Image</string>
+    <string name="reset_item">Reset</string>
+    <string name="test_item">Test</string>
 </resources>
