--- a/Touch Image/res/values/strings.xml
+++ b/Touch Image/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="app_name">Touch Image</string>
     <string name="reset_item">Reset</string>
     <string name="test_item">Test</string>
+
+	<!-- Utils -->
+	<string name="error">Error</string>
+	<string name="exception">Exception</string>
+	<string name="info">Info</string>
+	<string name="ok">OK</string>
+	<string name="warning">Warning</string>
 </resources>
