--- a/Map Image/res/values/strings.xml
+++ b/Map Image/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="menu_settings">Settings</string>
     <string name="open_item">New Image</string>
     <string name="reset_item">Reset</string>
+    <string name="start_location">Start Location</string>
+    <string name="stop_location">Stop Location</string>
     <string name="test_item">Test</string>
     
 	<!-- Utils -->
