--- a/Map Image/res/values/strings.xml
+++ b/Map Image/res/values/strings.xml
@@ -3,13 +3,14 @@
 
     <string name="app_name">Map Image</string>
 	<string name="content_image">Image</string>
-    <string name="current_location_item">Current Location</string>
 	<string name="hello_world">Hello World, MapImage</string>
 	<string name="image_info">Info</string>
+    <string name="image_directory_item">Image Directory</string>
 	<string name="image_file_list_name">Image Files</string>
     <string name="menu_settings">Settings</string>
     <string name="open_item">New Image</string>
     <string name="reset_item">Reset</string>
+    <string name="set_image_directory_item">Set Image Directory</string>
     <string name="start_location_item">Start Location</string>
     <string name="stop_location_item">Stop Location</string>
     <string name="test_item">Test</string>
