Added location accuracy to info.  Made menu option to set the update interval.  Fixed it to show the last known location immediately.  Fixed up the location logic.
git-svn-id: http://svn.kenevans.net/Android/trunk@555 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Map Image/res/values/strings.xml
+++ b/Map Image/res/values/strings.xml
@@ -14,6 +14,10 @@
     <string name="start_location_item">Start Location</string>
     <string name="stop_location_item">Stop Location</string>
     <string name="test_item">Test</string>
+    <string name="update_slow">Slow</string>
+    <string name="update_fast">Fast</string>
+    <string name="update_fastest">Fastest</string>
+    <string name="update_title">Set Update Interval</string>
     
 	<!-- Utils -->
 	<string name="error">Error</string>
