Fixed it to restore from restore.txt in the Heart Monitor directory.  restore.txt should be created from one of the saved .txt files.
git-svn-id: http://svn.kenevans.net/Android/trunk@560 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Heart Monitor/res/values/strings.xml
+++ b/Heart Monitor/res/values/strings.xml
@@ -3,13 +3,16 @@
     <string name="app_name">Heart Monitor</string>
 	<string name="Filter_item">Filter</string>
 	<string name="new_item">New</string>
-		<string name="refresh_item">Refresh</string>
+	<string name="refresh_item">Refresh</string>
+	<string name="restore_item">Restore</string>
 	<string name="save_item">Save as Text</string>
 	<string name="save">Save</string>
 	<string name="tostart_item">Beginning</string>
 	<string name="toend_item">End</string>
 	<string name="delete">Delete</string>
-    <string name="cancel">Cancel</string>
+	<string name="delete_prompt">All existing data will be deleted</string>
+	<string name="confirm">Confirm</string>
+	<string name="cancel">Cancel</string>
     <string name="edit_data">Edit Data</string>
     <string name="count_label">Count</string>
     <string name="total_label">Total</string>
