Fixed it to set the data directory via the menu.
git-svn-id: http://svn.kenevans.net/Android/trunk@561 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/Heart Monitor/res/values/strings.xml
+++ b/Heart Monitor/res/values/strings.xml
@@ -5,6 +5,7 @@
 	<string name="new_item">New</string>
 	<string name="refresh_item">Refresh</string>
 	<string name="restore_item">Restore</string>
+	<string name="set_data_directory_item">Set Data Directory</string>
 	<string name="save_item">Save as Text</string>
 	<string name="save">Save</string>
 	<string name="tostart_item">Beginning</string>
