--- a/Heart Monitor/res/values/strings.xml
+++ b/Heart Monitor/res/values/strings.xml
@@ -13,6 +13,7 @@
 	<string name="delete">Delete</string>
 	<string name="delete_prompt">All existing data will be deleted</string>
 	<string name="confirm">Confirm</string>
+	<string name="select_restore_file">Select File to Restore</string>
 	<string name="cancel">Cancel</string>
     <string name="edit_data">Edit Data</string>
     <string name="count_label">Count</string>
