--- a/SenseView Viewer/res/values/strings.xml
+++ b/SenseView Viewer/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_plot">PlotActivity</string>
     <string name="file_directory">Dir</string>
-
+    <string name="view_info">View Info</string>
+    
     <!-- Utils -->
     <string name="error">Error</string>
     <string name="exception">Exception</string>
