--- a/HxM Monitor/res/values/strings.xml
+++ b/HxM Monitor/res/values/strings.xml
@@ -2,9 +2,32 @@
 <resources>
 
     <string name="app_name">HxM Monitor</string>
+    <string name="device_scan_name">Select BLE Device</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    
+    <string name="ble_not_supported">BLE is not supported</string>
+    <string name="label_data">Data:</string>
+    <string name="label_device_address">Device address:</string>
+    <string name="label_state">State:</string>
+    <string name="no_data">No data</string>
+    <string name="connected">Connected</string>
+    <string name="disconnected">Disconnected</string>
+    <string name="title_devices">BLE Device Scan</string>
+    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
 
+    <string name="unknown_device">Unknown Device</string>
+    <string name="unknown_characteristic">Unknown Characteristic</string>
+    <string name="unknown_service">Unknown Service</string>
+
+    <!-- Menu items -->
+    <string name="menu_connect">Connect</string>
+    <string name="menu_refresh">Refresh</string>
+    <string name="menu_disconnect">Disconnect</string>
+    <string name="menu_scan">Scan</string>
+    <string name="menu_stop">Stop</string>
+    <string name="menu_select_device">Select Device</string>
+    
 	<!-- Utils -->
 	<string name="error">Error</string>
 	<string name="exception">Exception</string>
