--- a/HxM Monitor/res/values/strings.xml
+++ b/HxM Monitor/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="menu_scan">Scan</string>
     <string name="menu_stop">Stop</string>
     <string name="menu_select_device">Select Device</string>
+    <string name="menu_test">Test</string>
     
 	<!-- Utils -->
 	<string name="error">Error</string>
