--- a/HxM Monitor/res/values/strings.xml
+++ b/HxM Monitor/res/values/strings.xml
@@ -7,10 +7,18 @@
     <string name="action_settings">Settings</string>
     
     <string name="ble_not_supported">BLE is not supported</string>
-    <string name="label_data">Data:</string>
-    <string name="label_device_address">Device address:</string>
-    <string name="label_state">State:</string>
-    <string name="no_data">No data</string>
+    <string name="label_data">Data: </string>
+    <string name="label_device_name">Device name: </string>
+    <string name="label_device_address">Device address: </string>
+    <string name="label_hr">Heart Rate: </string>
+    <string name="label_rr">R-R: </string>
+    <string name="label_bat">Battery Level: </string>
+    <string name="label_act">Activity: </string>
+    <string name="label_pa">Peak Acceleration: </string>
+    <string name="label_state">State: </string>
+    <string name="label_status">Status: </string>
+    <string name="no_data">NA</string>
+    <string name="empty"></string>
     <string name="connected">Connected</string>
     <string name="disconnected">Disconnected</string>
     <string name="title_devices">BLE Device Scan</string>
