Is working to display desired values, but is not getting battery, activity, and peak acceleration.  Scan doesn't work when monitoring.  Renamed DeviceControlActivity and associated other files.
git-svn-id: http://svn.kenevans.net/Android/trunk@634 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/HxM Monitor/res/values/strings.xml
+++ b/HxM Monitor/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">HxM Monitor</string>
     <string name="device_scan_name">Select BLE Device</string>
+    <string name="device_monitor_name">HxM Monitor</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     
