Added BleNamesResolver from BLEDemo and fixed BluetoothLeService to use it.  Deleted GattAttributes.  Fixed it to prompt before scan if device is connected.  Verified it can only accept notifications from one characteristic at a time.
git-svn-id: http://svn.kenevans.net/Android/trunk@638 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/HxM Monitor/res/values/strings.xml
+++ b/HxM Monitor/res/values/strings.xml
@@ -24,6 +24,11 @@
     <string name="disconnected">Disconnected</string>
     <string name="title_devices">BLE Device Scan</string>
     <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
+    
+	<string name="scan_prompt">The current device may not be found in the scan, since it is still connected.  Continue?</string>
+    <string name="cancel">Cancel</string>
+	<string name="confirm">Confirm</string>
+    
 
     <string name="unknown_device">Unknown Device</string>
     <string name="unknown_characteristic">Unknown Characteristic</string>
