Basically working with database and black colors for plot background.
git-svn-id: http://svn.kenevans.net/Android/trunk@648 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/HxM Monitor/res/values/strings.xml
+++ b/HxM Monitor/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="title_devices">BLE Device Scan</string>
     <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
     <string name="view_info">View Info</string>
+    <string name="start_now">Start Now</string>
     
 	<string name="scan_prompt">The current device may not be found in the scan, since it is still connected.  Continue?</string>
     <string name="cancel">Cancel</string>
