--- a/HxM Monitor/res/values/strings.xml
+++ b/HxM Monitor/res/values/strings.xml
@@ -2,12 +2,13 @@
 <resources>
 
     <string name="app_name">HxM Monitor</string>
-    <string name="device_scan_name">Select BLE Device</string>
+    <string name="title_activity_session_manager">Session Manager</string>
+    <string name="title_activity_devices">BLE Device Scan</string>
+    <string name="title_activity_device_scan">Select BLE Device</string>
+    <string name="title_activity_plot">HxM Monitor</string>
     <string name="device_monitor_name">HxM Monitor</string>
-    <string name="plot_name">HxM Monitor</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    
     <string name="ble_not_supported">BLE is not supported</string>
     <string name="label_data">Data: </string>
     <string name="label_device_name">Device name: </string>
@@ -23,16 +24,12 @@
     <string name="empty"></string>
     <string name="connected">Connected</string>
     <string name="disconnected">Disconnected</string>
-    <string name="title_devices">BLE Device Scan</string>
     <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
     <string name="view_info">View Info</string>
-    <string name="start_now">Start Now</string>
-    
-	<string name="scan_prompt">The current device may not be found in the scan, since it is still connected.  Continue?</string>
+    <string name="scan_prompt">The current device may not be found in the scan, since it is still connected.  Continue?</string>
+    <string name="session_delete_prompt">Deleting %d sessions.  This cannot be undone.  Continue?</string>
     <string name="cancel">Cancel</string>
-	<string name="confirm">Confirm</string>
-    
-
+    <string name="confirm">Confirm</string>
     <string name="unknown_device">Unknown Device</string>
     <string name="unknown_characteristic">Unknown Characteristic</string>
     <string name="unknown_service">Unknown Service</string>
@@ -46,11 +43,18 @@
     <string name="menu_select_device">Select Device</string>
     <string name="menu_test">Test</string>
     <string name="menu_plot">Plot</string>
+    <string name="menu_discard">Discard</string>
+    <string name="menu_merge">Merge</string>
+    <string name="menu_split">Split</string>
+    <string name="menu_save">Save</string>
+    <string name="menu_session_manager">Session Manager</string>
+    <string name="menu_start_now">Start Now</string>
     
-	<!-- Utils -->
-	<string name="error">Error</string>
-	<string name="exception">Exception</string>
-	<string name="info">Info</string>
-	<string name="ok">OK</string>
-	<string name="warning">Warning</string>
+    <!-- Utils -->
+    <string name="error">Error</string>
+    <string name="exception">Exception</string>
+    <string name="info">Info</string>
+    <string name="ok">OK</string>
+    <string name="warning">Warning</string>
+
 </resources>
