--- a/HxM Monitor/res/values/strings.xml
+++ b/HxM Monitor/res/values/strings.xml
@@ -2,14 +2,14 @@
 <resources>
 
     <string name="app_name">HxM Monitor</string>
-    <string name="title_activity_session_manager">Session Manager</string>
+    <string name="title_activity_session_manager">Sessions</string>
     <string name="title_activity_devices">BLE Device Scan</string>
     <string name="title_activity_device_scan">Select BLE Device</string>
     <string name="title_activity_plot">HxM Monitor</string>
     <string name="device_monitor_name">HxM Monitor</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="ble_not_supported">BLE is not supported</string>
+    <string name="ble_not_supported">Bluetooth LE is not supported</string>
     <string name="label_data">Data: </string>
     <string name="label_device_name">Device name: </string>
     <string name="label_device_address">Device address: </string>
@@ -24,7 +24,7 @@
     <string name="empty"></string>
     <string name="connected">Connected</string>
     <string name="disconnected">Disconnected</string>
-    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
+    <string name="bluetooth_not_supported">Bluetooth is not supported.</string>
     <string name="view_info">View Info</string>
     <string name="scan_prompt">The current device may not be found in the scan, since it is still connected.  Continue?</string>
     <string name="session_delete_prompt">Deleting %d sessions.  This cannot be undone.  Continue?</string>
@@ -33,6 +33,13 @@
     <string name="unknown_device">Unknown Device</string>
     <string name="unknown_characteristic">Unknown Characteristic</string>
     <string name="unknown_service">Unknown Service</string>
+    <string name="select_restore_file">Select File to Restore</string>
+    <string name="delete_prompt">All existing data will be deleted and it may take a while</string>
+    <string name="restoring_database_progress_text">Restoring&#8230;\n(Can take a long time)</string>
+    
+    <!-- Service -->
+    <string name="service_notification_title">HxM Monitor</string>
+    <string name="service_notification_text">"HxM BLE Service is running"</string>
 
     <!-- Menu items -->
     <string name="menu_connect">Connect</string>
@@ -46,9 +53,14 @@
     <string name="menu_discard">Discard</string>
     <string name="menu_merge">Merge</string>
     <string name="menu_split">Split</string>
-    <string name="menu_save">Save</string>
+    <string name="menu_save">Save Session</string>
     <string name="menu_session_manager">Session Manager</string>
     <string name="menu_start_now">Start Now</string>
+    <string name="menu_check_all">Check All</string>
+    <string name="menu_check_none">Check None</string>
+    <string name="menu_save_database">Save Database</string>
+    <string name="menu_restore_database">Restore Database</string>
+    <string name="menu_restoring">Restoring</string>
     
     <!-- Utils -->
     <string name="error">Error</string>
