Preferences are implemented.  Ones for plot seems to be working.  Ones for monitor may not be entirely.
git-svn-id: http://svn.kenevans.net/Android/trunk@658 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/HxM Monitor/res/values/strings.xml
+++ b/HxM Monitor/res/values/strings.xml
@@ -70,6 +70,8 @@
     <string name="summary_hr_preference">Monitor the HR service</string>
     <string name="title_custom_preference">Custom</string>
     <string name="summary_custom_preference">Monitor the HxM Custom service</string>
+    <string name="title_battery_preference">Battery</string>
+    <string name="summary_battery_preference">Read the Battery value on connection</string>
     
     <string name="plot_preferences">Plot Settings</string>
     <string name="title_plot_hr_preference">HR</string>
