Redid session logic to queue writeDescriptor and readCharacteristic.  Added Get Battery Level to Device Monitor.  Seems to be working with new logic, which is much simpler.
git-svn-id: http://svn.kenevans.net/Android/trunk@660 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/HxM Monitor/res/values/strings.xml
+++ b/HxM Monitor/res/values/strings.xml
@@ -65,7 +65,8 @@
     <string name="menu_restore_database">Restore Database</string>
     <string name="menu_restoring">Restoring</string>
     <string name="menu_settings">Settings</string>
-
+    <string name="menu_read_battery_level">Get Battery level</string>
+    
     <!-- Preferences -->
     <string name="monitor_preferences">Monitor Settings</string>
     <string name="title_hr_preference">HR</string>
