Removed split and merge items from session menu and added save as combined session.  Fixed a bug related to checking tokens.length needs to check line.trim().length() (that shouldn't have been reached in normal use).  Changed VersionCode=2, versionName=1.0.1.
git-svn-id: http://svn.kenevans.net/Android/trunk@711 4b487630-4e8c-464e-b16a-428ddfb157b8

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="menu_merge">Merge</string>
     <string name="menu_split">Split</string>
     <string name="menu_save">Save Sessions</string>
+    <string name="menu_save_combined">Save As Combined Session</string>
     <string name="menu_save_gpx">Save Sessions As GPX</string>
     <string name="menu_session_manager">Session Manager</string>
     <string name="menu_start_now">Start Now</string>
@@ -66,7 +67,7 @@
     <string name="menu_restoring">Restoring</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_read_battery_level">Get Battery level</string>
-    
+
     <!-- Preferences -->
     <string name="monitor_preferences">Monitor Settings</string>
     <string name="title_hr_preference">HR</string>
