--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,12 @@
     <string name="menu_settings">Settings</string>
     <string name="menu_read_battery_level">Get Battery level</string>
 
+    <string name="error_bluetooth_manager">Bluetooth manager not found.</string>
+    <string name="error_bluetooth_adapter">Error getting Bluetooth adapter.</string>
+    <string name="permission_coarse_location">Scanning disabled
+        \n\nACCESS_COARSE_LOCATION permission must be granted to scan for Bluetooth devices.
+        \n\nYou may have to grant this manually for BLE Explorer in Settings.</string>
+
     <!-- Preferences -->
     <string name="monitor_preferences">Monitor Settings</string>
     <string name="title_hr_preference">HR</string>
