--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="ble_not_supported">Bluetooth LE is not supported</string>
+    <string name="permission_coarse_location">Scanning disabled
+        \n\nACCESS_COARSE_LOCATION permission must be granted to scan for Bluetooth devices.
+        \n\nYou may have to grant this manually for BLE Explorer in Settings.</string>
     <string name="label_data">Data: </string>
     <string name="label_device_name">Device name: </string>
     <string name="label_device_address">Device address: </string>
@@ -30,9 +33,7 @@
     <string name="bluetooth_not_supported">Bluetooth is not supported.</string>
     <string name="error_bluetooth_manager">Bluetooth manager not found.</string>
     <string name="error_bluetooth_adapter">Error getting Bluetooth adapter.</string>
-    <string name="permission_coarse_location">Scanning disabled
-        \n\nACCESS_COARSE_LOCATION permission must be granted to scan for Bluetooth devices.
-        \n\nYou may have to grant this manually for BLE Explorer in Settings.</string>
+
     <string name="view_info">View Info</string>
     <string name="scan_prompt">The current device may not be found in the scan, since it is still connected.  Continue?</string>
     <string name="session_delete_prompt">Deleting %d sessions.  This cannot be undone.  Continue?</string>
@@ -45,10 +46,14 @@
     <string name="select_restore_file">Select File to Restore</string>
     <string name="delete_prompt">All existing data will be deleted and it may take a while</string>
     <string name="restoring_database_progress_text">Restoring&#8230;\n(Can take a long time)</string>
+    <string name="null_uuid_msg">Received null uuid</string>
+    <string name="null_error_msg">Received null error message</string>
 
     <!-- Service -->
     <string name="service_notification_title">HxM Monitor</string>
     <string name="service_notification_text">"HxM BLE Service is running"</string>
+    <string name="exception_msg_format">Exception: %s</string>
+    <string name="not_available">NA</string>
     <string name="default_notification_channel_id">HxM_BLE_Service_Default</string>
     <string name="default_notification_description">HxM BLE Service</string>
 
@@ -73,10 +78,13 @@
     <string name="menu_check_all">Check All</string>
     <string name="menu_check_none">Check None</string>
     <string name="menu_save_database">Save Database</string>
-    <string name="menu_restore_database">Restore Database</string>
+    <string name="menu_save_database_cvs">Save Database as CVS</string>
+    <string name="menu_restore_database_cvs">Restore Database from CVS</string>
     <string name="menu_restoring">Restoring</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_read_battery_level">Get Battery level</string>
+    <string name="info_item">Info</string>
+    <string name="choose_data_directory_item">Choose Data Directory</string>
 
     <!-- Preferences -->
     <string name="monitor_preferences">Monitor Settings</string>
@@ -98,6 +106,12 @@
     <string name="title_plot_interval_preference">Real-Time Plot Interval</string>
     <string name="summary_plot_interval_preference">The length of the real-time plot interval</string>
     <string name="dialog_title_plot_interval_preference">Enter the interval in min</string>
+
+    <!-- Info/Help -->
+    <string name="help_url_not_found">Cannot find Help URL</string>
+    <string name="help_item">Help</string>
+    <string name="help_title">Help</string>
+    <string name="help_show_error">Error showing help</string>
 
     <!-- Utils -->
     <string name="error">Error</string>
